--- a/source/less/components/introduce.less
+++ b/source/less/components/introduce.less
@@ -1,15 +1,13 @@
-.introduce {
-  &__img-wrapper--main {
-    margin-top: 90px;
-    margin-right: 20px;
-    margin-left: 20px;
-    margin-bottom: 85px;
-  }
+.introduce__img-wrapper--main {
+  margin-top: 90px;
+  margin-right: 20px;
+  margin-left: 20px;
+  margin-bottom: 85px;
+}
 
-  &__img-wrapper--inner {
-    margin-top: 52px;
-    margin-right: 45px;
-    margin-left: 45px;
-    margin-bottom: 85px;
-  }
+.introduce__img-wrapper--inner {
+  margin-top: 52px;
+  margin-right: 45px;
+  margin-left: 45px;
+  margin-bottom: 85px;
 }
