--- a/source/less/components/main.less
+++ b/source/less/components/main.less
@@ -1,16 +1,14 @@
-.main {
-  &__introduce--main {
-    background-image: url("../img/mobile/index/introduce-section/introduce.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    margin-bottom: 32px;
-  }
+.main__introduce--main {
+  background-image: url("../img/mobile/index/introduce-section/introduce.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-bottom: 32px;
+}
 
-  &__introduce--inner {
-    background-image: url("../img/mobile/index/introduce-section/introduce.jpg");
-    background-repeat: no-repeat;
-    background-position: bottom;
-    background-size: cover;
-    margin-bottom: 31px;
-  }
+.main__introduce--inner {
+  background-image: url("../img/mobile/index/introduce-section/introduce.jpg");
+  background-repeat: no-repeat;
+  background-position: bottom;
+  background-size: cover;
+  margin-bottom: 31px;
 }
