--- a/source/less/style.less
+++ b/source/less/style.less
@@ -7,16 +7,15 @@
 @import "components/introduce.less";
 @import "components/main-nav.less";
 @import "components/main.less";
-@import "components/media-player.less";
 @import "components/page-footer.less";
 @import "components/page-header.less";
 @import "components/page.less";
 @import "components/photo-presentation.less";
 @import "components/post.less";
 @import "components/posts.less";
-@import "components/progress.less";
 @import "components/reason.less";
 @import "components/reasons.less";
 @import "components/video-presentation.less";
 @import "components/visually-hidden.less";
 @import "components/modal.less";
+@import "components/global.less";
