--- a/source/less/components/advantages.less
+++ b/source/less/components/advantages.less
@@ -1,26 +1,26 @@
-.advantages {
-  &__title {
-    font-size: 18px;
-    font-weight: 700;
-    line-height: 26px;
-    text-transform: uppercase;
-    width: 280px;
-    margin: 0 auto 28px;
-    text-align: center;
-  }
-
-  &__subtitle {
-    font-size: 18px;
-    line-height: 26px;
-    text-transform: uppercase;
-    margin: 0 auto 11px;
-    text-align: center;
-  }
-
-  &__list {
-    display: flex;
-    flex-direction: column;
-    list-style: none;
-    padding: 0;
-  }
+.advantages__title {
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 26px;
+  text-transform: uppercase;
+  width: 270px;
+  margin: 0 auto 28px;
+  text-align: center;
 }
+
+.advantages__subtitle {
+  font-size: 14px;
+  line-height: 26px;
+  text-transform: uppercase;
+  margin: 0 auto;
+  width: 290px;
+  text-align: center;
+}
+
+.advantages__list {
+  display: flex;
+  flex-direction: column;
+  list-style: none;
+  padding: 0;
+}
+
