--- a/source/less/components/comment-form.less
+++ b/source/less/components/comment-form.less
@@ -1,20 +1,16 @@
-.comment-form {
-  margin: 0 20px;
+.comment-form__title {
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 26px;
+  text-transform: uppercase;
+  text-align: center;
+  margin: 36px 0 30px;
+}
 
-  &__title {
-    font-size: 18px;
-    font-weight: 700;
-    line-height: 26px;
-    text-transform: uppercase;
-    text-align: center;
-    margin: 36px 0 30px;
-  }
-
-  &__subtitle {
-    font-size: 14px;
-    line-height: 24px;
-    text-transform: uppercase;
-    text-align: center;
-    margin: 0 0 37px;
-  }
+.comment-form__subtitle {
+  font-size: 14px;
+  line-height: 24px;
+  text-transform: uppercase;
+  text-align: center;
+  margin-bottom: 37px;
 }
