--- a/source/less/components/form.less
+++ b/source/less/components/form.less
@@ -1,86 +1,109 @@
-.form {
-  margin: 0 20px;
-
-  &__group {
-    border: 0 none;
-    padding: 0;
-    margin: 0 0 40px;
-  }
-
-  &__title {
-    padding: 0;
-    margin: 0 auto;
-    font-size: 18px;
-    font-weight: 700;
-    line-height: 26px;
-    text-transform: uppercase;
-    text-align: center;
-  }
-
-  &__list {
-    padding: 0;
-    margin: 0;
-  }
-
-  &__item {
-    list-style: none;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-  }
-
-  &__input-name {
-    padding: 0;
-    margin: 0;
-    font-size: 14px;
-    line-height: 26px;
-    text-transform: uppercase;
-    text-align: center;
-  }
-
-  &__input {
-    background-color: #f2f2f2;
-    border: none;
-    width: min-content;
-    padding: 18px 0 14px 22px;
-  }
-
-  &__input::placeholder {
-    color: #000000;
-    font-size: 18px;
-    font-weight: 700;
-    line-height: 26px;
-  }
-
-  &__radio-name {
-    font-size: 18px;
-    font-weight: 700;
-    line-height: 26px;
-  }
-
-  &__checkbox-name {
-    font-size: 18px;
-    font-weight: 700;
-    line-height: 26px;
-  }
-
-
-  &__textarea {
-    color: #000000;
-    font-size: 18px;
-    font-family: inherit;
-    font-weight: 700;
-    line-height: 26px;
-    background-color: #f2f2f2;
-    border: none;
-    padding: 13px 22px;
-    max-width: 280px;
-    box-sizing: border-box;
-  }
-
-  &__textarea::placeholder {
-    color: #000000;
-    font-size: 18px;
-    line-height: 26px;
-  }
+.form__group {
+  border: 0 none;
+  padding: 0;
+  margin: 0 20px 29px;
 }
+
+.form__title {
+  padding: 0;
+  margin: 0 auto 19px;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 26px;
+  text-transform: uppercase;
+  text-align: center;
+}
+
+.form__list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.form__item {
+  list-style: none;
+  margin-bottom: 20px;
+}
+
+.form__nomination-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.form__input-nomination-name {
+  padding: 0;
+  margin: 0 10px 0 0;
+  font-size: 14px;
+  line-height: 26px;
+  text-transform: uppercase;
+  text-align: center;
+}
+
+.form__input-nomination-contact {
+  font-size: 14px;
+  line-height: 26px;
+  text-transform: uppercase;
+  margin-left: 23px;
+  margin-bottom: 8px;
+}
+
+.form__input {
+  background-color: #f2f2f2;
+  width: 100%;
+  box-sizing: border-box;
+  border: none;
+  padding: 18px 80px 14px 22px;
+}
+
+.form__input::placeholder {
+  color: #000000;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 26px;
+}
+
+.form__radio-name {
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 26px;
+}
+
+.form__checkbox-name {
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 26px;
+}
+
+.form__textarea {
+  color: #000000;
+  font-size: 18px;
+  font-family: inherit;
+  font-weight: 700;
+  line-height: 26px;
+  background-color: #f2f2f2;
+  border: none;
+  padding: 13px 22px;
+  max-width: 280px;
+  box-sizing: border-box;
+}
+
+.form__textarea::placeholder {
+  color: #000000;
+  font-size: 18px;
+  line-height: 26px;
+}
+
+.form__contact-input-wrapper {
+  position: relative;
+}
+
+.form__icon-wrapper {
+  position: absolute;
+  background-color: #e6e6e6;
+  top: 0;
+  right: 0;
+  height: 100%;
+  width: 20%;
+}
+
