--- a/source/less/components/hotels-search.less
+++ b/source/less/components/hotels-search.less
@@ -1,30 +1,34 @@
-.hotels-search {
-  &__title {
-    font-size: 21px;
-    font-weight: 700;
-    line-height: 26px;
-    text-transform: uppercase;
-    text-align: center;
-  }
-
-  &__description {
-    font-size: 14px;
-    line-height: 24px;
-    text-transform: uppercase;
-    text-align: center;
-    width: 261px;
-  }
-
-  &__button {
-    color: #ffffff;
-    width: 280px;
-    padding: 15px 32px 18px 32px;
-    font-size: 21px;
-    font-weight: 700;
-    line-height: 26px;
-    text-transform: uppercase;
-    text-align: center;
-    background-color: #81b3d2;
-    border: none;
-  }
+.hotels-search__title {
+  font-size: 21px;
+  font-weight: 700;
+  line-height: 26px;
+  text-transform: uppercase;
+  text-align: center;
+  margin: 0 auto 25px;
 }
+
+.hotels-search__description {
+  font-size: 14px;
+  line-height: 24px;
+  text-transform: uppercase;
+  text-align: center;
+  width: 261px;
+  margin: 0 auto 27px;
+}
+
+.hotels-search__button {
+  display: block;
+  margin: 0 auto 49px;
+  padding-top: 15px;
+  padding-bottom: 18px;
+  color: #ffffff;
+  min-width: 280px;
+  font-size: 21px;
+  font-weight: 700;
+  line-height: 26px;
+  text-transform: uppercase;
+  text-align: center;
+  background-color: #81b3d2;
+  border: none;
+}
+
