--- a/source/less/components/modal.less
+++ b/source/less/components/modal.less
@@ -1,38 +1,38 @@
-.modal {
-  &__title {
-    font-size: 18px;
-    font-weight: 700;
-    line-height: 26px;
-    text-transform: uppercase;
-    text-align: center;
-    margin: 30px auto 25px;
-  }
+.modal__title {
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 26px;
+  text-transform: uppercase;
+  text-align: center;
+  margin: 30px auto 25px;
+}
 
-  &__description {
-    font-size: 18px;
-    line-height: 26px;
-    text-align: center;
-    width: 244px;
-    margin: 0 auto 22px;
-  }
+.modal__description {
+  font-size: 18px;
+  line-height: 26px;
+  text-align: center;
+  width: 244px;
+  margin: 0 auto 22px;
+}
 
-  &__button {
-    color: #ffffff;
-    font-size: 18px;
-    font-weight: 700;
-    line-height: 26px;
-    text-transform: uppercase;
-    text-align: center;
-    min-width: 280px;
-    padding-top: 18px;
-    padding-bottom: 14px;
-    margin: 0 20px;
-    background-color: #81b3d2;
-    border: none;
-  }
+.modal__button {
+  display: block;
+  color: #ffffff;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 26px;
+  text-transform: uppercase;
+  text-align: center;
+  min-width: 280px;
+  padding-top: 18px;
+  padding-bottom: 14px;
+  margin: 0 auto;
+  background-color: #81b3d2;
+  border: none;
+}
 
-  &__button-wrapper {
-    background-color: #f2f2f2;
-    height: 98px;
-  }
+.modal__button-wrapper {
+  background-color: #f2f2f2;
+  padding: 20px;
+  min-height: 98px;
 }
