--- a/source/less/components/photo-presentation.less
+++ b/source/less/components/photo-presentation.less
@@ -1,19 +1,21 @@
-.photo-presentation {
-  &__title {
-    font-size: 18px;
-    font-weight: 700;
-    line-height: 26px;
-    text-transform: uppercase;
-    width: 280px;
-    margin: 0 auto 28px;
-    text-align: center;
-  }
+.photo-presentation__title {
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 26px;
+  text-transform: uppercase;
+  width: 280px;
+  margin: 0 auto 30px;
+  text-align: center;
+}
 
-  &__subtitle {
-    font-size: 14px;
-    line-height: 24px;
-    text-transform: uppercase;
-    margin: 0 auto 57px;
-    text-align: center;
-  }
+.photo-presentation__subtitle {
+  font-size: 14px;
+  line-height: 24px;
+  text-transform: uppercase;
+  margin: 0 auto 57px;
+  text-align: center;
+}
+
+.photo-presentation__post {
+  margin: 0 20px;
 }
