--- a/source/less/components/posts.less
+++ b/source/less/components/posts.less
@@ -1,7 +1,5 @@
-.posts {
-  &__list {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-  }
+.posts__list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
