--- a/source/less/components/video-presentation.less
+++ b/source/less/components/video-presentation.less
@@ -1,26 +1,24 @@
-.video-presentation {
-  &__title {
-    font-size: 18px;
-    font-weight: 700;
-    line-height: 26px;
-    text-transform: uppercase;
-    text-align: center;
-    margin: 33px 20px 33px;
-  }
+.video-presentation__title {
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 26px;
+  text-transform: uppercase;
+  text-align: center;
+  margin: 33px 20px 33px;
+}
 
-  &__subtitle {
-    font-size: 14px;
-    line-height: 24px;
-    text-transform: uppercase;
-    text-align: center;
-    margin: 0 20px 33px;
-  }
+.video-presentation__subtitle {
+  font-size: 14px;
+  line-height: 24px;
+  text-transform: uppercase;
+  text-align: center;
+  margin: 0 20px 33px;
+}
 
-  &__video {
-    position: relative;
-  }
+.video-presentation__video {
+  position: relative;
+}
 
-  &__promo-video {
-    position: absolute;
-  }
+.video-presentation__promo-video {
+  position: absolute;
 }
