--- a/source/less/components/hotels-search.less
+++ b/source/less/components/hotels-search.less
@@ -4,7 +4,7 @@
   line-height: 26px;
   text-transform: uppercase;
   text-align: center;
-  margin: 0 auto 25px;
+  margin: 33px auto 25px;
 }
 
 .hotels-search__description {
@@ -31,4 +31,3 @@
   background-color: #81b3d2;
   border: none;
 }
-
