--- a/source/less/components/introduce.less
+++ b/source/less/components/introduce.less
@@ -1,13 +1,17 @@
+.introduce {
+  background-image: url("../img/mobile/index/introduce-section/introduce.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.introduce--inner {
+  background-position: bottom;
+}
+
 .introduce__img-wrapper--main {
-  margin-top: 90px;
-  margin-right: 20px;
-  margin-left: 20px;
-  margin-bottom: 85px;
+  margin: 90px 20px 85px;
 }
 
 .introduce__img-wrapper--inner {
-  margin-top: 52px;
-  margin-right: 45px;
-  margin-left: 45px;
-  margin-bottom: 85px;
+  margin: 52px 45px 85px;
 }
