--- a/source/less/components/photo-presentation.less
+++ b/source/less/components/photo-presentation.less
@@ -12,7 +12,7 @@
   font-size: 14px;
   line-height: 24px;
   text-transform: uppercase;
-  margin: 0 auto 57px;
+  margin: 0 20px 57px;
   text-align: center;
 }
 
