--- a/source/less/components/reason.less
+++ b/source/less/components/reason.less
@@ -21,6 +21,10 @@
   margin: 0;
 }
 
+.reason:first-child {
+  margin-top: 26px;
+}
+
 .reason__description {
   grid-column: ~"2 / 3";
   grid-row: ~"2 / 3";
