--- a/source/less/components/hotels-search.less
+++ b/source/less/components/hotels-search.less
@@ -31,3 +31,9 @@
   background-color: #81b3d2;
   border: none;
 }
+
+.hotels-search__img {
+  object-fit: cover;
+  object-position: 50%;
+  width: 100%;
+}
