--- a/source/less/components/introduce.less
+++ b/source/less/components/introduce.less
@@ -1,17 +1,23 @@
 .introduce {
-  background-image: url("../img/mobile/index/introduce-section/introduce.jpg");
+  background-image: url("../../img/mobile/index/introduce-section/introduce.jpg");
   background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.introduce--inner {
   background-position: bottom;
 }
 
-.introduce__img-wrapper--main {
-  margin: 90px 20px 85px;
+.introduce--inner {
+  display: block;
+  background-position: bottom;
 }
 
-.introduce__img-wrapper--inner {
-  margin: 52px 45px 85px;
+.introduce__img--main {
+  margin: 90px auto 85px;
+}
+
+.introduce__img--inner {
+  text-align: center;
+  margin: 52px auto 67px;
+}
+
+.introduce__img-wrapper {
+  text-align: center;
 }
