--- a/source/less/components/advantage.less
+++ b/source/less/components/advantage.less
@@ -9,7 +9,6 @@
   background-color: #d6d6d6;
   width: 280px;
   height: 1px;
-  margin: 0 20px;
 }
 
 .advantage:not(:first-child):not(:nth-child(2)) {
@@ -19,11 +18,20 @@
 .advantage__wrapper {
   color: #ffffff;
   background-color: #81b3d2;
+
+  @media (min-width: @tablet-width) {
+    display: flex;
+    width: 100%;
+  }
 }
 
 .advantage__background-svg {
   background-image: url("../../img/mobile/index/advantages-section/first-advantage-background.svg");
   background-repeat: no-repeat;
+
+  @media (min-width: @tablet-width) {
+    background-image: none;
+  }
 }
 
 .advantage__title {
@@ -32,7 +40,7 @@
   line-height: 26px;
   text-transform: uppercase;
   text-align: center;
-  margin: 25px 20px 11px;
+  margin: 25px 0 11px;
 }
 
 .advantage__title--first-child-indent {
@@ -50,7 +58,7 @@
   line-height: 21px;
   text-transform: uppercase;
   text-align: center;
-  margin: 0 20px 15px;
+  margin-bottom: 15px;
 }
 
 .advantage__description {
@@ -58,7 +66,7 @@
   line-height: 21px;
   text-transform: uppercase;
   text-align: center;
-  margin: 0 20px 25px;
+  margin-bottom: 25px;
   width: 282px;
 }
 
@@ -72,7 +80,12 @@
 
 .advantage__image {
   display: block;
-  margin-top: auto;
-  object-fit: contain;
-  object-position: left;
+  object-fit: cover;
+  object-position: 80%;
+  width: 100%;
+  height: 260px;
+
+  @media (min-width: @tablet-width) {
+    height: 258px;
+  }
 }
