--- a/source/less/components/advantages.less
+++ b/source/less/components/advantages.less
@@ -23,4 +23,10 @@
   list-style: none;
   padding: 0;
   margin: 0;
+
+  @media (min-width: @tablet-width) {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+  }
 }
