--- a/source/less/components/global.less
+++ b/source/less/components/global.less
@@ -19,3 +19,18 @@
 *::after {
   box-sizing: border-box;
 }
+
+.container {
+  padding: 0 20px;
+
+  @media (min-width: @tablet-width) {
+    padding: 0 30px;
+  }
+
+  @media (min-width: @tablet-width) {
+    padding: 0 56px;
+  }
+}
+
+@tablet-width: 768px;
+@desktop-width: 1280px;
