--- a/source/less/components/main-nav.less
+++ b/source/less/components/main-nav.less
@@ -1,17 +1,21 @@
 .main-nav {
-  position: relative;
   display: grid;
-  grid-template-columns: repeat(4, 70px);
+  grid-template-columns: repeat(4, 1fr);
   grid-template-rows: 56px;
-  padding-left: 20px;
-  padding-right: 20px;
-}
 
+  @media (min-width: @tablet-width) {
+    grid-template-columns: 1fr 1fr 2fr 1fr 1fr;
+  }
+}
 
 .main-nav__header-logo {
   display: grid;
   grid-column: ~"2 / 4";
   margin: 0 auto;
+
+  @media (min-width: @tablet-width) {
+    grid-column: ~"3 / 4";
+  }
 }
 
 .main-nav__button {
@@ -27,6 +31,10 @@
   cursor: pointer;
   padding: 0;
   border: none;
+
+  @media (min-width: @tablet-width) {
+    display: none;
+  }
 }
 
 .main-nav__toggle {
@@ -56,6 +64,10 @@
     height: 3px;
     margin-top: 18px;
   }
+
+  @media (min-width: @tablet-width) {
+    display: none;
+  }
 }
 
 .main-nav__list {
@@ -69,6 +81,26 @@
   margin: 0;
   top: 0;
   left: 0;
+
+  @media (min-width: @tablet-width) {
+    position: absolute;
+    display: grid;
+    grid-template-columns: 1fr 1fr 2fr 1fr 1fr;
+    grid-auto-flow: column;
+    align-self: center;
+    vertical-align: middle;
+    padding: 0 30px;
+    height: 100%;
+    align-items: center;
+
+    .main-nav__item:nth-child(3) {
+      grid-column: ~"4 / 5";
+    }
+
+    .main-nav__item:nth-child(4) {
+      grid-column: ~"5 / 6";
+    }
+  }
 }
 
 .main-nav__item-link {
@@ -83,8 +115,21 @@
   background-color: #81b3d2;
   padding-top: 10px;
   padding-bottom: 5px;
+
+  @media (min-width: @tablet-width) {
+    display: grid;
+    color: #000000;
+    background-color: transparent;
+    font-size: 14px;
+    line-height: 26px;
+    padding: 0;
+  }
 }
 
 .main-nav__wrapper--mobile {
   display: none;
+
+  @media (min-width: @tablet-width) {
+    display: block;
+  }
 }
