--- a/source/less/components/page-footer.less
+++ b/source/less/components/page-footer.less
@@ -1,7 +1,15 @@
 .page-footer__wrapper {
   display: flex;
   flex-direction: column;
-  margin: 0 20px;
+  margin: 0;
+
+  @media (min-width: @tablet-width) {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 36px;
+    margin-bottom: 36px;
+  }
 }
 
 .page-footer__hashtag {
@@ -12,6 +20,10 @@
   text-align: center;
   margin-top: 29px;
   margin-bottom: 33px;
+
+  @media (min-width: @tablet-width) {
+    margin: 0;
+  }
 }
 
 .page-footer__social-list {
@@ -21,6 +33,10 @@
   list-style: none;
   padding: 0;
   margin: 0 0 40px;
+
+  @media (min-width: @tablet-width) {
+    margin: 0;
+  }
 }
 
 .page-footer__social-item:not(:last-child) {
@@ -45,6 +61,10 @@
   display: flex;
   justify-content: center;
   margin-bottom: 29px;
+
+  @media (min-width: @tablet-width) {
+    margin: 0;
+  }
 }
 
 .page-footer__copyright-text {
