--- a/source/less/components/page.less
+++ b/source/less/components/page.less
@@ -4,4 +4,12 @@
   width: 320px;
   height: 100%;
   font-family: "PT Sans", sans-serif;
+
+  @media (min-width: @tablet-width) {
+    width: 768px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 1200px;
+  }
 }
