--- a/source/less/components/post.less
+++ b/source/less/components/post.less
@@ -1,48 +1,53 @@
+.post {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 44px;
+}
+
+.post:last-child {
+  margin-bottom: 54px;
+}
+
+.post::after {
+  content: "";
+  position: absolute;
+  background-color: #d6d6d6;
+  width: 100%;
+  left: 0;
+  height: 1px;
+  bottom: -21px;
+}
+
 .post__figure {
   margin: 0;
-  display: grid;
-  grid-template-columns: 37px 1fr;
-  grid-template-rows: 1fr 24px 24px 24px;
-  margin-bottom: 45px;
 }
 
 .post__img-wrapper {
-  display: grid;
   object-fit: contain;
-  grid-column: 1 / 3;
-  grid-row: 1 / 2;
   margin: 0;
   margin-bottom: 10px;
 }
 
 .post__title {
-  display: grid;
   font-size: 14px;
   font-weight: 700;
   line-height: 24px;
   text-transform: uppercase;
-  grid-column: 1 / 3;
-  grid-row: 2 / 3;
 }
 
 .post__photo-author {
-  display: grid;
   font-style: normal;
   font-size: 14px;
   line-height: 24px;
-  grid-column: 1 / 3;
-  grid-row: 3 / 4;
-  margin-bottom: 10px;
+  margin-bottom: 13px;
 }
 
 .post__like-icon {
-  display: grid;
   background-color: transparent;
   padding: 0;
+  margin-right: 14px;
   border: none;
-  grid-column: 1 / 2;
-  grid-row: 4 / 5;
-  align-self: center;
 }
 
 .post__like-quantity {
@@ -50,8 +55,8 @@
   font-weight: 700;
   line-height: 24px;
   margin: 0;
-  display: grid;
-  grid-column: 2 / 3;
-  grid-row: 4 / 5;
-  align-self: center;
+}
+
+.post__likes {
+  display: flex;
 }
