--- a/source/less/components/reasons.less
+++ b/source/less/components/reasons.less
@@ -1,5 +1,9 @@
 .reasons__list {
   list-style: none;
   padding: 0;
-  margin: 0 20px;
+
+  @media (min-width: @tablet-width) {
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
