--- a/source/less/components/photo-presentation.less
+++ b/source/less/components/photo-presentation.less
@@ -14,8 +14,8 @@
   text-transform: uppercase;
   margin: 0 auto 57px;
   text-align: center;
-}
 
-.photo-presentation__post {
-  margin: 0 20px;
+  @media (min-width: @tablet-width) {
+    width: 440px;
+  }
 }
