--- a/source/less/style.less
+++ b/source/less/style.less
@@ -19,3 +19,5 @@
 @import "components/visually-hidden.less";
 @import "components/modal.less";
 @import "components/global.less";
+@import "components/video.less";
+@import "components/media-player.less";
