--- a/source/less/components/comment-form.less
+++ b/source/less/components/comment-form.less
@@ -12,5 +12,9 @@
   line-height: 24px;
   text-transform: uppercase;
   text-align: center;
-  margin-bottom: 37px;
+  margin: 0 auto 37px;
+
+  @media (min-width: @tablet-width) {
+    width: 434px;
+  }
 }
