--- a/source/less/components/form.less
+++ b/source/less/components/form.less
@@ -1,12 +1,82 @@
+.form {
+  @media (min-width: @tablet-width) {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 390px 330px 330px 330px;
+    // flex-direction: row;
+    // justify-content: space-between;
+    // flex-wrap: wrap;
+  }
+}
+
 .form__group {
   border: 0 none;
   padding: 0;
   margin: 0 0 29px;
 }
 
+.form__group:nth-child(1) {
+  @media (min-width: @tablet-width) {
+    order: 2;
+    grid-column: ~"2 / 3";
+    grid-row: ~"1 / 2";
+  }
+}
+
+.form__group:nth-child(2) {
+  @media (min-width: @tablet-width) {
+    order: 3;
+    grid-column: ~"1 / 3";
+    grid-row: ~"2 / 3";
+  }
+}
+
+.form__group:nth-child(3) {
+  @media (min-width: @tablet-width) {
+    order: 1;
+    grid-column: ~"1 / 2";
+    grid-row: ~"1 / 2";
+  }
+}
+
+.form__group:nth-child(4) {
+  @media (min-width: @tablet-width) {
+    order: 4;
+    grid-column: ~"1 / 3";
+    grid-row: ~"3 / 4";
+
+    .form__list {
+      display: flex;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      margin: 58px 95px 0;
+    }
+
+    .form__item {
+      width: 200px;
+      margin-bottom: 62px;
+    }
+  }
+
+  @media (min-width: @desktop-width) {
+    .form__list {
+      margin: 58px 00;
+    }
+  }
+}
+
+.form__group:nth-child(5) {
+  @media (min-width: @tablet-width) {
+    order: 5;
+    grid-column: ~"1 / 3";
+    grid-row: ~"4 / 5";
+  }
+}
+
 .form__title {
   padding: 0;
   margin: 0 auto 19px;
+  width: 300px;
   font-size: 18px;
   font-weight: 700;
   line-height: 26px;
@@ -22,7 +92,7 @@
 
 .form__item {
   list-style: none;
-  margin-bottom: 52px;
+  margin-bottom: 30px;
 }
 
 .form__nomination-wrapper {
@@ -49,11 +119,12 @@
 }
 
 .form__input {
+  position: relative;
   background-color: #f2f2f2;
   width: 100%;
   box-sizing: border-box;
   border: none;
-  padding: 18px 80px 14px 22px;
+  padding: 18px 22px 14px 22px;
   min-height: 58px;
   font-size: 18px;
   font-weight: 700;
@@ -73,10 +144,10 @@
 }
 
 .form__icon-wrapper {
-  position: absolute;
+  position: relative;
   background-color: #e6e6e6;
-  top: 0;
-  right: 0;
+  top: -58px;
+  left: 100%;
   height: 58px;
   width: 58px;
 }
@@ -120,6 +191,10 @@ input[type="radio"]:checked + .form__mark {
 
 input[type="checkbox"] + .form__mark {
   border-radius: 10%;
+
+  @media (min-width: @desktop-width) {
+    border-radius: 01;
+  }
 }
 
 
