--- a/source/less/components/global.less
+++ b/source/less/components/global.less
@@ -24,10 +24,10 @@
   padding: 0 20px;
 
   @media (min-width: @tablet-width) {
-    padding: 0 30px;
+    padding: 0 60px;
   }
 
-  @media (min-width: @tablet-width) {
+  @media (min-width: @desktop-width) {
     padding: 0 120px;
   }
 }
