--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,23 +1,25 @@
 // Начните писать стили здесь
-@import "components/advantage.less";
-@import "components/advantages.less";
-@import "components/comment-form.less";
-@import "components/form.less";
-@import "components/hotels-search.less";
-@import "components/introduce.less";
-@import "components/main-nav.less";
-@import "components/main.less";
-@import "components/page-footer.less";
-@import "components/page-header.less";
-@import "components/page.less";
-@import "components/photo-presentation.less";
-@import "components/post.less";
-@import "components/posts.less";
-@import "components/reason.less";
-@import "components/reasons.less";
-@import "components/video-presentation.less";
-@import "components/visually-hidden.less";
-@import "components/modal.less";
+// components
 @import "components/global.less";
-@import "components/video.less";
-@import "components/media-player.less";
+@import "components/visually-hidden.less";
+// components/variables
+@import "components/variables/advantage.less";
+@import "components/variables/advantages.less";
+@import "components/variables/comment-form.less";
+@import "components/variables/form.less";
+@import "components/variables/hotels-search.less";
+@import "components/variables/introduce.less";
+@import "components/variables/main-nav.less";
+@import "components/variables/main.less";
+@import "components/variables/page-footer.less";
+@import "components/variables/page-header.less";
+@import "components/variables/page.less";
+@import "components/variables/photo-presentation.less";
+@import "components/variables/post.less";
+@import "components/variables/posts.less";
+@import "components/variables/reason.less";
+@import "components/variables/reasons.less";
+@import "components/variables/video-presentation.less";
+@import "components/variables/modal.less";
+@import "components/variables/video.less";
+@import "components/variables/media-player.less";
