--- a/source/less/components/advantage.less
+++ b/source/less/components/advantage.less
@@ -1,14 +1,47 @@
 .advantage {
   display: block;
   position: relative;
+
+  &:nth-child(2) {
+    .advantage__image--wrapper {
+      order: -1;
+    }
+  }
+
+  @media (min-width: @tablet-width) {
+    min-width: 256px;
+
+    &:nth-child(1),
+    &:nth-child(2) {
+      .advantage__text {
+        min-width: 192px;
+      }
+    }
+  }
+
+  @media (min-width: @desktop-width) {
+    min-width: 400px;
+
+    &:nth-child(1),
+    &:nth-child(2) {
+      .advantage__text {
+        min-width: 295px;
+      }
+    }
+  }
 }
 
-.advantage:not(:first-child):not(:nth-child(2)):not(:nth-child(3))::before {
-  content: "";
-  position: absolute;
-  background-color: #d6d6d6;
-  width: 280px;
-  height: 1px;
+@media (max-width: @mobile-width-only) {
+  .advantage:not(:first-child):not(:nth-child(2)):not(:nth-child(3))::before {
+    content: "";
+    position: absolute;
+    background-color: #d6d6d6;
+    width: 280px;
+    height: 1px;
+    left: 0;
+    margin-left: 20px;
+    margin-right: 20px;
+  }
 }
 
 .advantage:not(:first-child):not(:nth-child(2)) {
@@ -25,12 +58,32 @@
   }
 }
 
-.advantage__background-svg {
+.advantage__wrapper--background-svg {
   background-image: url("../../img/mobile/index/advantages-section/first-advantage-background.svg");
   background-repeat: no-repeat;
 
   @media (min-width: @tablet-width) {
     background-image: none;
+  }
+}
+
+.advantage__text {
+  display: flex;
+  flex-direction: column;
+  min-width: 256px;
+  margin-left: 20px;
+  margin-right: 20px;
+
+  @media (min-width: @tablet-width) {
+    width: 191px;
+    margin-left: 32px;
+    margin-right: 32px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 290px;
+    margin-left: 52px;
+    margin-right: 52px;
   }
 }
 
@@ -40,16 +93,27 @@
   line-height: 26px;
   text-transform: uppercase;
   text-align: center;
-  margin: 25px 0 11px;
+  margin: 25px auto 20px;
+
+  @media (min-width: @tablet-width) {
+    margin: 41px auto 20px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin: 47px auto 20px;
+  }
 }
 
 .advantage__title--first-child-indent {
-  padding-top: 71px;
+  @media (max-width: @mobile-width-only) {
+    padding-top: 71px;
+  }
 }
 
 .advantage__title--second-child-indent {
-  margin-top: 0;
-  padding-top: 39px;
+  @media (max-width: @mobile-width-only) {
+    padding-top: 39px;
+  }
 }
 
 .advantage__number {
@@ -58,7 +122,11 @@
   line-height: 21px;
   text-transform: uppercase;
   text-align: center;
-  margin-bottom: 15px;
+  margin: 0 auto 15px;
+
+  @media (min-width: @tablet-width) {
+    margin: 0 auto 20px;
+  }
 }
 
 .advantage__description {
@@ -66,26 +134,44 @@
   line-height: 21px;
   text-transform: uppercase;
   text-align: center;
-  margin-bottom: 25px;
-  width: 282px;
+  margin: 0 auto 20px;
+  width: 147px;
+
+  @media (min-width: @tablet-width) {
+    margin: 0 auto 42px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin: 0 auto 57px;
+  }
 }
 
 .advantage__description--first-child-indent {
-  margin-bottom: 39px;
+  width: auto;
+
+  @media (min-width: @desktop-width) {
+    margin: 0 32px 39px;
+  }
 }
 
 .advantage__description--second-child-indent {
-  margin-bottom: 35px;
+  width: auto;
+
+  @media (min-width: @desktop-width) {
+    margin: 0 32px 35px;
+  }
 }
 
 .advantage__image {
   display: block;
   object-fit: cover;
-  object-position: 80%;
   width: 100%;
-  height: 260px;
 
   @media (min-width: @tablet-width) {
-    height: 258px;
+    height: 100%;
   }
+}
+
+.advantage__image--wrapper {
+  width: 100%;
 }
