--- a/source/less/components/main.less
+++ b/source/less/components/main.less
@@ -1,3 +1,15 @@
+.main__inner--form {
+  margin-bottom: 48px;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 58px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-bottom: 61px;
+  }
+}
+
 .main__introduce {
   margin-bottom: 34px;
 }
