--- a/source/less/components/form.less
+++ b/source/less/components/form.less
@@ -2,7 +2,13 @@
   @media (min-width: @tablet-width) {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 390px 330px 330px 330px;
+    grid-template-rows: 390px 330px 330px 374px;
+  }
+
+  @media (min-width: @desktop-width) {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 390px 240px 230px 376px;
   }
 }
 
@@ -10,6 +16,10 @@
   border: 0 none;
   padding: 0;
   margin: 0 0 29px;
+
+  @media (min-width: @tablet-width) {
+    margin: 0;
+  }
 }
 
 .form__group--name {
@@ -17,12 +27,22 @@
     grid-column: ~"2 / 3";
     grid-row: ~"1 / 2";
   }
+
+  @media (min-width: @desktop-width) {
+    position: relative;
+    width: 400px;
+    margin-left: auto;
+  }
 }
 
 .form__group--contact {
   @media (min-width: @tablet-width) {
     grid-column: ~"1 / 3";
     grid-row: ~"2 / 3";
+  }
+
+  @media (min-width: @desktop-width) {
+    position: relative;
   }
 }
 
@@ -50,16 +70,22 @@
       width: 200px;
       margin-bottom: 62px;
     }
+
+    @media (min-width: @desktop-width) {
+      position: relative;
+    }
   }
 
   @media (min-width: @desktop-width) {
     .form__list {
-      margin: 58px 00;
+      margin: 0;
     }
   }
 }
 
 .form__group--emotions {
+  position: relative;
+
   @media (min-width: @tablet-width) {
     grid-column: ~"1 / 3";
     grid-row: ~"4 / 5";
@@ -77,20 +103,144 @@
   text-align: center;
 }
 
+.form__title--impression-indent {
+  @media (min-width: @tablet-width) {
+    margin-bottom: 72px;
+  }
+
+  @media (min-width: @desktop-width) {
+    text-align: left;
+    margin: 0 0 72px 72px;
+  }
+}
+
+.form__title--contact-indent {
+  @media (min-width: @tablet-width) {
+    margin-bottom: 72px;
+  }
+}
+
+.form__title--attraction-indent {
+  margin-bottom: 58px;
+}
+
+.form__title--name {
+  @media (min-width: @desktop-width) {
+    margin: 0 0 55px;
+    text-align: left;
+  }
+}
+
+.form__title--name-elements {
+  @media (min-width: @desktop-width) {
+    ::before {
+      content: "";
+      display: block;
+      position: absolute;
+      top: 140px;
+      left: -220px;
+      width: 280px;
+      height: 1px;
+      transform: rotate(90deg);
+      background-color: #dbdbdb;
+    }
+  }
+}
+
+.form__title--contact-elements {
+  @media (min-width: @desktop-width) {
+    ::before {
+      content: "";
+      display: block;
+      position: absolute;
+      top: 13px;
+      left: 0;
+      width: 280px;
+      height: 1px;
+      background-color: #dbdbdb;
+    }
+
+    ::after {
+      content: "";
+      display: block;
+      position: absolute;
+      top: 13px;
+      right: 0;
+      width: 280px;
+      height: 1px;
+      background-color: #dbdbdb;
+    }
+  }
+}
+
+
+.form__title--attraction-elements {
+  @media (min-width: @desktop-width) {
+    ::before {
+      content: "";
+      display: block;
+      position: absolute;
+      top: 26px;
+      left: 0;
+      width: 280px;
+      height: 1px;
+      background-color: #dbdbdb;
+    }
+
+    ::after {
+      content: "";
+      display: block;
+      position: absolute;
+      top: 26px;
+      right: 0;
+      width: 280px;
+      height: 1px;
+      background-color: #dbdbdb;
+    }
+  }
+}
+
 .form__list {
   list-style: none;
   padding: 0;
   margin: 0;
 }
 
+.form__list--contact-input-direction {
+  @media (min-width: @desktop-width) {
+    display: flex;
+    justify-content: space-between;
+  }
+}
+
 .form__item {
   list-style: none;
   margin-bottom: 30px;
+
+  @media (max-width: @mobile-width-only) {
+    margin-right: 20px;
+  }
+}
+
+.form__item--impression-indent:not(:last-child) {
+  @media (min-width: @tablet-width) {
+    margin-bottom: 52px;
+  }
+}
+
+.form__item--contact-input-direction {
+  @media (min-width: @desktop-width) {
+    display: flex;
+    justify-content: space-between;
+  }
+}
+
+.form__contact-input--wrapper {
+  width: 100%;
 }
 
 .form__nomination-wrapper {
   display: flex;
-  justify-content: space-between;
   align-items: center;
 }
 
@@ -140,7 +290,7 @@
   position: relative;
   background-color: #e6e6e6;
   top: -58px;
-  left: 100%;
+  margin-left: auto;
   height: 58px;
   width: 58px;
 }
@@ -218,13 +368,17 @@ input[type="checkbox"]:checked + .form__mark {
   padding: 13px 22px;
   max-width: 280px;
   box-sizing: border-box;
+  height: 160px;
+  margin-bottom: 51px;
 
   @media (min-width: @tablet-width) {
     min-width: 648px;
+    margin-bottom: 58px;
   }
 
   @media (min-width: @desktop-width) {
     min-width: 960px;
+    margin-bottom: 60px;
   }
 }
 
@@ -232,4 +386,43 @@ input[type="checkbox"]:checked + .form__mark {
   color: #000000;
   font-size: 18px;
   line-height: 26px;
+}
+
+.form__button {
+  width: 280px;
+  background-color: #81b3d2;
+  color: #ffffff;
+  font-size: 21px;
+  font-weight: 700;
+  line-height: 26px;
+  text-transform: uppercase;
+  padding: 15px;
+  border: none;
+  margin-bottom: 48px;
+
+  @media (min-width: @tablet-width) {
+    width: 324px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 480px;
+  }
+}
+
+.form__required {
+  @media (max-width: @mobile-width-only) {
+    display: none;
+  }
+
+  @media (min-width: @tablet-width) {
+    display: block;
+    position: absolute;
+    top: 225px;
+    right: 0;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    font-size: 14px;
+    line-height: 26px;
+    text-transform: uppercase;
+  }
 }
