--- a/source/less/components/media-player.less
+++ b/source/less/components/media-player.less
@@ -1,9 +1,29 @@
 .media-player {
+  display: flex;
   position: absolute;
   bottom: 0;
+  width: 100%;
+  height: 93px;
+  background-color: rgba(1, 1, 1, 0.6);
 }
 
 .media-player__button {
   border: none;
   background-color: transparent;
+
+  &:first-child {
+    margin-left: 35px;
+  }
+
+  &:last-child {
+    margin-right: 42px;
+  }
+}
+
+.media-player__button-icon {
+  fill: #ffffff;
+}
+
+.media-player__button--subtitles {
+  margin-left: auto;
 }
