--- a/source/less/components/page.less
+++ b/source/less/components/page.less
@@ -5,11 +5,13 @@
   height: 100%;
   font-family: "PT Sans", sans-serif;
 
+
   @media (min-width: @tablet-width) {
     width: 768px;
   }
 
   @media (min-width: @desktop-width) {
     width: 1200px;
+    box-shadow: 0 5px 15px 0 rgba(0, 1, 1, 0.2);
   }
 }
