--- a/source/less/components/photo-presentation.less
+++ b/source/less/components/photo-presentation.less
@@ -1,10 +1,10 @@
 .photo-presentation__title {
-  font-size: 18px;
+  font-size: 30px;
   font-weight: 700;
   line-height: 26px;
   text-transform: uppercase;
   width: 280px;
-  margin: 0 auto 30px;
+  margin: 101px auto 30px;
   text-align: center;
 }
 
