--- a/source/less/components/page-footer.less
+++ b/source/less/components/page-footer.less
@@ -70,6 +70,12 @@
   }
 }
 
+.page-footer__copyright-link {
+  display: flex;
+  text-decoration: none;
+  color: #000000;
+}
+
 .page-footer__copyright-text {
   font-size: 14px;
   line-height: 26px;
