--- a/source/less/components/hotels-search.less
+++ b/source/less/components/hotels-search.less
@@ -29,6 +29,19 @@
   text-align: center;
   background-color: #81b3d2;
   border: none;
+
+  &:hover {
+    background-color: #669ec0;
+  }
+
+  &:active {
+    background-color: #5496bd;
+    color: rgba(255, 255, 255, 0.3);
+  }
+
+  &:disabled {
+    background-color: #e5e5e5;
+  }
 }
 
 .hotels-search__img {
