--- a/source/less/components/page-footer.less
+++ b/source/less/components/page-footer.less
@@ -47,17 +47,15 @@
 }
 
 .page-footer__social-item {
-  display: block;
+  display: flex;
+  justify-content: center;
   width: 47px;
   height: 48px;
   background-color: #81b3d2;
 }
 
 .page-footer__social-link {
-  display: block;
-  text-align: center;
-  padding-top: 35%;
-  padding-bottom: 30%;
+  align-self: center;
 }
 
 .page-footer__copyright {
@@ -72,6 +70,7 @@
 
 .page-footer__copyright-link {
   display: flex;
+  height: 100%;
   text-decoration: none;
   color: #000000;
 }
