--- a/source/less/components/introduce.less
+++ b/source/less/components/introduce.less
@@ -2,35 +2,35 @@
   background-color: #191919;
 
   @media (max-width: @mobile-width-only) {
-    background-image: url("../../img/index/introduce-section/introduce.jpg");
+    background-image: url("../img/index/introduce-section/introduce.jpg");
     background-repeat: no-repeat;
     background-position: bottom;
     background-size: cover;
     min-height: 389px;
 
     @media (min-resolution: 2dppx) {
-      background-image: url("../../img/index/introduce-section/introduce@2x.jpg");
+      background-image: url("../img/index/introduce-section/introduce@2x.jpg");
     }
   }
 
   @media (min-width: @tablet-width) {
-    background-image: url("../../img/index/introduce-section/introduce-tablet.jpg");
+    background-image: url("../img/index/introduce-section/introduce-tablet.jpg");
     background-repeat: no-repeat;
     background-position: bottom;
     background-size: cover;
     min-height: 518px;
 
     @media (min-resolution: 2dppx) {
-      background-image: url("../../img/index/introduce-section/introduce-tablet@2x.jpg");
+      background-image: url("../img/index/introduce-section/introduce-tablet@2x.jpg");
     }
   }
 
   @media (min-width: @desktop-width) {
-    background-image: url("../../img/index/introduce-section/introduce-desktop.jpg");
+    background-image: url("../img/index/introduce-section/introduce-desktop.jpg");
     min-height: 518px;
 
     @media (min-resolution: 2dppx) {
-      background-image: url("../../img/index/introduce-section/introduce-desktop@2x.jpg");
+      background-image: url("../img/index/introduce-section/introduce-desktop@2x.jpg");
     }
   }
 }
