--- a/source/less/components/main.less
+++ b/source/less/components/main.less
@@ -12,4 +12,12 @@
 
 .main__introduce {
   margin-bottom: 34px;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 42px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-bottom: 52px;
+  }
 }
